--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">PillSoGood</string>
     <string name="str_popular_this_weekend">금주의 핫 게시물</string>
+    <string name="str_recommend_vitamin_d"><u>비타민D 추천 영양제 보러가기</u></string>
+    <string name="str_recommend_lactobacillus"><u>유산균 추천 영양제 보러가기</u></string>
 </resources>
