Add result fragement

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,19 @@
     <string name="str_popular_this_weekend">금주의 핫 게시물</string>
     <string name="str_recommend_vitamin_d"><u>비타민D 추천 영양제 보러가기</u></string>
     <string name="str_recommend_lactobacillus"><u>유산균 추천 영양제 보러가기</u></string>
+    <string name="str_omega3">오메가3</string>
+    <string name="str_omega3_explain">오메가3는 주로 생선 기름에 많이 함유되어있는 불포화지방산으로, 효능을 나타내는 주요 성분은 DHA와 EPA입니다. 오메가3는 간에서 중성지방이 합성되는 것을 억제하여 혈전 생성을 방지하고, 혈관내피세포의 기능을 개선하여 혈행 개선에 도움을 줄 수 있습니다. 오메가3는 서구화된 식습관, 인스턴트 음식 과다 섭취 등으로 인해 부족한 경우가 많습니다. 또한, 체내에서 합성되는 효율이 매우 낮아 식품이나 건강기능식품으로 섭취하는 것이 좋습니다. 일일 권장 섭취량은 DHA와 EPA의 합으로서 매일 500~2,000mg이며 일주일에 2~3회 고등어 등의 등푸른 생선을 먹는 것으로 500mg이상 섭취가 가능합니다.</string>
+    <string name="str_magnesium">마그네슘</string>
+    <string name="str_magnesium_explain">마그네슘은 우리 신체 내의 무기질 중 네 번째로 많은 다량 무기질로서, 에너지를 생성하는 과정에서 중요한 역할을 수행하며 뼈를 단단하게 해 뇌, 신경 조절에 이로움을 줍니다. 또한 단백질 및 근육의 수축 등 체내에서 일어나는 생리적 과정에 관여하며, 칼슘의 혈관벽 침착을 막아주기 때문에 동맥경화 예방과 혈압을 유지하는데 도움을 줍니다. 마그네슘은 개인의 식습관에 따라서 섭취량이 많이 부족해질 수 있는데, 마그네슘이 부족할 경우에는 칼슘 조절이 정상적으로 기능하지 않아 떨림, 경련, 불안 등의 증상이 발생하기도 합니다. 따라서 보충제를 통해 마그네슘을 충분하게 섭취해주는 것이 좋습니다. </string>
+    <string name="str_lactobacillus">유산균</string>
+    <string name="str_lactobacillus_explain">유산균은 적당량을 섭취했을 때 인체에 이로움을 주는 살아있는 세균을 총칭하는 말로 우리 몸에 유익을 주는 균을 말합니다. 유산균은 몸 안의 위산과 담즙산에서 살아남아서 소장까지 도달하여 장에서 증식하고 정착합니다. 정착한 장 안에서 건강과 면역기능에 이로움을 줄 수 있습니다. 또한 생체 순환에 큰 역할을 할 수 있습니다. 나이가 들면서 점차 유익균은 감소하고 장내 유해균은 증가하게 되는데, 이러한 정상적인 노화 과정에서 장내 균의 분포를 건강한 상태로 유지하도록 도와주는 것이 유산균의 기능입니다. 일반적으로 유산균은 젖당(락토오스)을 발효하여 젖산이나 알코올을 생성시켜 만든 발효유 제품으로 섭취되는데, 유산균은 치즈와 요구르트로부터 김치와 된장에 이르기까지 발효를 이용한 음식들에 많이 들어있으며, 특히 발효식품을 통하여 섭취하는 것부터 최근에는 건강기능식품을 통해 섭취하기까지 다양한 경로가 있습니다. </string>
+    <string name="str_lutein">루테인</string>
+    <string name="str_lutein_explain">루테인이란 노화나 주변 환경으로 눈의 황반색소밀도가 감소하는 것을 막고 유지시켜 눈을 건강하게 도와줄 수 있는 기능성 성분을 말합니다. 보통은 눈 피로제로 많이 불리워서 식품이라고 인지하는 사례도 많지만 체내에 꼭 필요한 물질입니다. 우리 눈은 망막 중심부에 위치한 황반을 통해 빛을 받아들이고 사물을 분별하는데, 나이가 들면 황반을 구성하는 루테인이 점차 감소하기 시작하면서 황반 기능이 떨어집니다. 황반 기능이 떨어지면 먼저 시력이 저하되며, 따라서 시력 저하를 막고 실명질환을 예방하려면 황반 속 루테인 함량이 떨어지지 않게끔 영양제 형태로 루테인을 충분히 보충해주는 것이 좋습니다. 하루 권장 섭취량은 10~20mg이나, 식사량만으로 충족하기 어려우므로 루테인 보충용 건강기능식품을 통해 섭취하는 것이 도움이 됩니다. </string>
+    <string name="str_vitaminA">비타민A</string>
+    <string name="str_vitaminB">비타민B</string>
+    <string name="str_vitaminB_explain">비타민B군은 세포 대사에 중요한 역할을 하는 수용성 비타민의 복합체로서, 인체 내의 에너지와 관련된 다양한 역할을 수행합니다. 필수영양소인 탄수화물, 단백질, 지방 대사에 관여하며, 체내 에너지 생성에 관여하여 피로회복에 도움을 줄 수 있습니다. 또한, 점막을 재생하고 보호하는 역할에 관여하여 구강 점막에 생기는 구내염에 도움이 될 수 있습니다. 수용성 비타민으로 따로 제한 섭취량이 없어 충분히 섭취하는 것이 좋습니다.</string>
+    <string name="str_vitaminC">비타민C</string>
+    <string name="str_vitaminC_explain">비타민C는 가장 유명한 항산화제로서 체내에서 생성되는 유해산소를 억제하여 세포를 보호해주는 수용성 비타민입니다. 또한 결합 조직과 지지조직을 형성하고 철의 운반과 이용에 도움을 주는 필수적인 영양성분입니다. 비타민C는 철분흡수를 도와, 철분의 결핍으로 인한 빈혈을 예방하는데 도움을 줍니다. 또한 간세포가 손상되는 것을 막아주며 음주를 하게 되면 알코올을 빠르게 제거할 수 있도록 돕습니다. 따라서 흡연자나 음주자는 더욱 많은 섭취가 필요하며, 야외활동을 많이 하거나 감기가 쉽게 걸리는 분들이 섭취 시에 많은 도움이 될 수 있습니다. 음식으로는 오렌지, 감귤, 피망, 딸기, 키위, 브로콜리 등 다양한 식품에 함유되어 있습니다.</string>
+    <string name="str_vitaminD">비타민D</string>
+    <string name="str_vitaminD_explain">비타민D는 자외선을 받아야 우리 몸에서 합성이 되는 성분으로, 사람의 피부에서 햇볕을 받아 합성이 되지만 최근에는 야외활동을 많이 하지 않고 자외선 차단제를 사용해서 체내 합성이 매우 부족합니다. 비타민D는 몸 안의 칼슘농도를 안정적으로 유지해 뼈를 건강하게 하고 면역 기능에도 관여합니다. 충분 섭취량으로 매일 10~15μg정도가 필요하고 100μg 이상은 섭취하지 않는 것이 좋습니다. 국민 건강 영양조사에 따르면 성인의 70~80%가 기준치(20ng/mL) 이하의 혈중 비타민D 농도를 나타내, 별도의 영양제로 섭취하는 것을 권장합니다.</string>
 </resources>
